# cvisiris_examples

./: .gitignore  14_dof_directives_newshelf.yaml  14dof_clique_seeding.py  14dof_env_vis.ipynb  14dof_env_vis2.ipynb  2dik_visualization.py  2dof_ik.ipynb  3d_pinball_flipper_plot.ipynb  3dof_clique_seeding.py  3dof_clique_test.py  3dof_naive_seeding.py  3dof_visualization.py  3dofsign.glb  3dofsign.mtl  5dof_clique_seeding.py  5dof_naive_seeding.py  5dof_task_space_seeding.ipynb  5dof_visualize_result.ipynb  6dof_clique_seeding.py  6dof_task_space_seeding.ipynb  7_dof_directives.yaml  7_dof_directives_newshelf.yaml  7_dof_directives_newshelf_floating.yaml  7_dof_iiwa_directive.yaml  7_dof_iiwa_shelves_directive.yaml  7dof_4shelves_clique_seeding.py  7dof_4shelves_eval .ipynb  7dof_bins_clique_seeding.py  7dof_bins_eval.ipynb  7dof_bins_eval.py  7dof_bins_example.yaml  7dof_bins_gcs.ipynb  7dof_bins_task_space_seeding.py  7dof_bins_test_for_russ.ipynb  7dof_clique_seeding.py  7dof_env_pathplanning_gcs.ipynb  7dof_env_traj_playback.ipynb  7dof_env_vis.ipynb  7dof_gcs_example_test.py  7dof_naive_seeding.py  (+41 more)
.ipynb_checkpoints/: 14dof_env_vis-checkpoint.ipynb  14dof_env_vis2-checkpoint.ipynb  7dof_env_vis-checkpoint.ipynb
assets/: 2d_obs.urdf  oneDOF_iiwa7_with_box_collision.sdf  roi_box.urdf  shelves1.sdf  shelves_big.sdf  twoDOF_iiwa7_with_box_collision.sdf
assets/models/iiwa_description/: BUILD.bazel
assets/models/iiwa_description/iiwa6/: iiwa6_with_box_collision.sdf
assets/models/shelves/: shelves.sdf
assets/models/ur3e/: BUILD.bazel
assets/models/wsg_50_description/: BUILD.bazel
assets/models/wsg_50_description/sdf/: schunk_wsg_50_welded_fingers_box_geom.sdf
display_signs/: 3dofsign.gltf  5dof_sign.gltf  5dof_sign_arxiv.gltf  5dofsign.gltf  5dofsign_icra.gltf  7dof_sign_arxiv.gltf  7dofsign.gltf  7dofsign_icra.gltf
misc_scripts/: 3d_pinball_flipper.ipynb  3d_pinball_flipper_plot.ipynb  3d_pinball_flipper_seeding.py  UR_seeding.ipynb  UR_seeding_script.py  clique_cover.ipynb  parse_clique_seeding copy.ipynb  parse_naive_seeding.ipynb
